# imt2531-exam

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Notes to self.txt  README.md  config.yml
assets/materials/: BB8_body.yml  _default.yml  brick.yml  brickwall.yml  cloud.yml  default.yml  seasonUI.yml  skybox.yml  standard.yml  subsurfaceScatter.yml  terrain.yml  terrain_contour.yml  terrain_mixed.yml  terrain_regular.yml  water.yml
assets/models/: Icosphere.yml  Suzanne.yml  _default.yml  axes-gizmo.yml  cube.yml  glider.yml  out.yml  skybox.yml  spaceSkybox.yml
assets/objs/glider/: glider.mtl
assets/scenes/: _default.yml  demo1.yml  objview.yml  skybox.yml
assets/shaders/: _default.glsl  atmosphereScatter.glsl_dontLoad  axes.glsl  base.glsl  base.shader  cloud.glsl  default.glsl  edge.shader  lit.shader  objshader.glsl  seasonUI.glsl  skybox.glsl  standard.glsl  subsurfaceScatter.glsl  terrain.glsl  water.glsl
blender/: default.blend
blender-export/: export.py  single-mesh-no-uv.py
docs/: config.example.yml  references.md  scene.example.yml
include/: elementBuffer.hpp  gl_util.hpp  vertexArray.hpp  vertexBuffer.hpp
include/PMS/: logger.h
include/overkill/: Config.hpp  ElementBuffer.hpp  Entity.hpp  EntityCamera.hpp  EntityDirectionalLight.hpp  EntityGlider.hpp  EntityModel.hpp  EntityNode.hpp  EntityPointLight.hpp  EntitySystem.hpp  Init.hpp  Input.hpp  Material.hpp  MaterialSystem.hpp  Model.hpp  ModelSystem.hpp  Parser.hpp  Renderer.hpp  Scene.hpp  SeasonSystem.hpp  ShaderIntrospector.hpp  ShaderProgram.hpp  ShaderSystem.hpp  Texture.hpp  TextureSystem.hpp  UniformBuffer.hpp  Util.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferAttribLayout.hpp  Watcher.hpp  elementBuffer.hpp  gl_caller.hpp  gl_drawSettings.hpp  gl_util.hpp  logger.h  material.hpp  mesh.hpp  renderer.hpp  shader.hpp  (+4 more)
lib/SOIL/: README.md
lib/glfw-3.2.1/: CMakeLists.txt  README.md
lib/glm-0.9.8.5/: readme.md
lib/imgui/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
lib/tiny_obj_loader/: CMakeLists.txt  README.md  tiny_obj_loader.h  tinyobjloader-config.cmake.in  tinyobjloader.pc.in
lib/tinyheaders/: README.md  tinyfiles.h
src/: Config.cpp  ElementBuffer.cpp  Entity.cpp  EntityCamera.cpp  EntityDirectionalLight.cpp  EntityGlider.cpp  EntityModel.cpp  EntityNode.cpp  EntityPointLight.cpp  EntitySystem.cpp  Init.cpp  Input.cpp  Material.cpp  MaterialSystem.cpp  Model.cpp  ModelSystem.cpp  Parser.cpp  Renderer.cpp  Scene.cpp  SeasonSystem.cpp  ShaderIntrospector.cpp  ShaderProgram.cpp  ShaderSystem.cpp  Texture.cpp  TextureSystem.cpp  UniformBuffer.cpp  Util.cpp  VertexArray.cpp  VertexBuffer.cpp  Watcher.cpp  elementBuffer.cpp  gl_caller.cpp  gl_util.cpp  main.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
tool/: default.blend  discover.py  export.py  export_many_mesh.py  make.py  test-discover.cpp
tools/: discover.py  test-discover.cpp
